* expr.c (convert_move): Use simplify_gen_subreg to make SUBREG so         we avoid SUBREGing memory.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46722 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -3,6 +3,8 @@
         * expmed.c (store_bit_field): Use simplify_gen_subreg to make
         SUBREG so we avoid SUBREGing memory.
 
+        * expmed.c (store_bit_field): Same.
+
 2001-11-02  DJ Delorie  <dj@redhat.com>
 
 	* config/rs6000/rs6000.c (rs6000_emit_move): Make sure that
