--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-03  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* doc/extend.texi, doc/gcc.texi, doc/install.texi, doc/tm.texi:
+	Use "invalid" instead of "illegal".  Use @r in comments in
+	examples.
+
 2001-11-02  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* c-decl.c (pushdecl): Move block inside if conditional to remove
