--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,41 @@
 Sat Nov  3 10:37:56 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
+	* cselib.c (cselib_subst_to_values, case CONST_DOUBLE): Remove
+ 	reference to CONST_DOUBLE_MEM in comment.
+	* emit-rtl.c (gen_rtx_CONST_DOUBLE): Remove one operand.
+	(gen_rtx, case CONST_DOUBLE): Call it with one less operand.
+	(init_emit_once): Don't clear CONST_DOUBLE_MEM.
+	* function.c (pop_function_context_from): Don't call
+	restore_varasm_status.
+	* function.h (restore_varasm_status): Delete declaration.
+	* gengenrtl.c (CONST_DOUBLE_FORMAT): Delete CONST_DOUBLE_MEM slot.
+	* rtl.c: Likewise.
+	* rtl.def (CONST_DOUBLE): Update comment.
+	* rtl.h (CONST_DOUBLE_HIGH, CONST_DOUBLE_LOW): Update operand number.
+	(CONST_DOUBLE_CHAIN): Likewise.
+	(CONST_DOUBLE_MEM): Delete.
+	(gen_rtx_CONST_DOUBLE): Update parameters.
+	* varasm.c (struct varasm_status): x_pool_offset now HOST_WIDE_INT.
+	Remove reference to CONST_DOUBLE_MEM.
+	(const_alias_set): New variable.
+	(immed_double_const): Change call to gen_rtx_CONST_DOUBLE.
+	(immed_real_const_1): Adjust tests for 0, 1, and 2.
+	Don't set CONST_DOUBLE_MEM.
+	(clear_const_double_mem): Don't do anything with const_tiny_rtx.
+	(output_constant_def): Don't look at TREE_CST_RTL if INTEGER_CST.
+	Put constant in const_alias_set.
+	(struct pool_constant): ALIGN now unsigned.
+	OFFSET now HOST_WIDE_INT.
+	Delete LABEL.
+	(restore_varasm_status): Deleted.
+	(mark_pool_constant): Mark desc->rtl.
+	(force_const_mem): Rework to store rtl in hash table,
+	not CONST_DOUBLE_MEM.
+	Put constant in const_alias_set.
+	(find_pool_constant): Check desc->rtl.
+	(mark_constants, mark_constant): Don't special-case CONST_DOUBLE.
+	(init_varasm_once): Initialize const_alias_set.
+
 	* expr.c (expand_expr, case ADDDR_EXPR): If at top level, don't call
 	force_const_mem.
 
