* configure.in (noconfigdirs) [mmix-*-*]: Disable libgcj. 	* MAINTAINERS: Add self as maintainer of MMIX port. 	Remove old after-approval entry.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46744 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-03  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* configure.in (noconfigdirs) [mmix-*-*]: Disable libgcj.
+	* MAINTAINERS: Add self as maintainer of MMIX port.
+	Remove old after-approval entry.
+
 2001-10-28  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* ChangeLog, configure: Fix spelling errors.
