* config.gcc (mmix-*-*): New target. 	* doc/invoke.texi: Document MMIX options. 	* doc/contrib.texi: Add note about MMIX port to my entry. 	* config/mmix/t-mmix: New file. 	* config/mmix/mmix.h: New file. 	* config/mmix/mmix-protos.h: New file. 	* config/mmix/mmix.c: New file. 	* config/mmix/mmix.md: New file. 	* config/mmix/crti.asm: New file. 	* config/mmix/crtn.asm: New file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46746 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,16 @@
+2001-11-03  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* config.gcc (mmix-*-*): New target.
+	* doc/invoke.texi: Document MMIX options.
+	* doc/contrib.texi: Add note about MMIX port to my entry.
+	* config/mmix/t-mmix: New file.
+	* config/mmix/mmix.h: New file.
+	* config/mmix/mmix-protos.h: New file.
+	* config/mmix/mmix.c: New file.
+	* config/mmix/mmix.md: New file.
+	* config/mmix/crti.asm: New file.
+	* config/mmix/crtn.asm: New file.
+
 2001-11-03  Kazu Hirata  <kazu@hxi.com>
 
 	* config/sparc/linux-aout.h: Fix comment formatting.
