--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2001-11-04  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* doc/invoke.texi (MMIX Options) <-mno-knuthdiv>: Say remainder
+	consistently.
+	<-mno-toplevel-symbols>: Change @code{:} to @samp{:}.
+	<-melf>: Don't have markup for ELF acronym.
+
 2001-11-03  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* config.gcc (mmix-*-*): New target.
