--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-03  Aldy Hernandez  <aldyh@redhat.com>
+
+        * machmode.def: Add documentation for the seventh argument in
+        vector modes.
+
 2001-11-04  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* doc/invoke.texi (MMIX Options) <-mno-knuthdiv>: Say remainder
