* defineclass.cc (handleClassBegin): Use Object::class$, not 	Class::class$, when initializing interface superclass.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46754 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-03  Tom Tromey  <tromey@redhat.com>
+
+	* defineclass.cc (handleClassBegin): Use Object::class$, not
+	Class::class$, when initializing interface superclass.
+
 2001-11-02  Hans Boehm <Hans_Boehm@hp.com>
 
 	* java/util/natResourceBundle.cc:getClassContext: return
