--- a/gcc/config/fr30/fr30.md
+++ b/gcc/config/fr30/fr30.md
@@ -568,7 +568,7 @@
   ""
   "*
   {
-  char *          ldi_instr;
+  const char *    ldi_instr;
   const char *    tmp_reg;
   static char     buffer[100];
   REAL_VALUE_TYPE d;
@@ -1189,7 +1189,7 @@
       {
         static char   buffer [100];
 	const char *  tmp_reg; 
-	char *        ldi_insn;
+	const char *  ldi_insn;
 	
         tmp_reg = reg_names [COMPILER_SCRATCH_REGISTER];
 	
@@ -1243,7 +1243,7 @@
       {
         static char   buffer [100];
 	const char *  tmp_reg; 
-	char *        ldi_insn;
+	const char *  ldi_insn;
 	
         tmp_reg = reg_names [COMPILER_SCRATCH_REGISTER];
 	
@@ -1315,7 +1315,7 @@
       {
         static char   buffer [100];
 	const char *  tmp_reg; 
-	char *        ldi_insn;
+	const char *  ldi_insn;
 	
         tmp_reg = reg_names [COMPILER_SCRATCH_REGISTER];
 
