--- a/gcc/config/i960/i960.md
+++ b/gcc/config/i960/i960.md
@@ -632,6 +632,8 @@
       if (operands[1] == const0_rtx)
 	return \"st	g14,%0\";
       return \"st	%1,%0\";      
+    default:
+      abort();
     }
 }"
   [(set_attr "type" "move,address,load,store")
@@ -665,6 +667,8 @@
       return \"ld	%1,%0\";
     case 3:
       return \"st	%1,%0\";      
+    default:
+      abort();
     }
 }"
   [(set_attr "type" "move,address,load,store")
@@ -715,6 +719,8 @@
       if (operands[1] == const0_rtx)
 	return \"stos	g14,%0\";
       return \"stos	%1,%0\";
+    default:
+      abort();
     }
 }"
   [(set_attr "type" "move,misc,load,store")
@@ -749,6 +755,8 @@
       return \"ldos	%1,%0\";
     case 3:
       return \"stos	%1,%0\";
+    default:
+      abort();
     }
 }"
   [(set_attr "type" "move,misc,load,store")
@@ -796,6 +804,8 @@
       if (operands[1] == const0_rtx)
 	return \"stob	g14,%0\";
       return \"stob	%1,%0\";
+    default:
+      abort();
     }
 }"
   [(set_attr "type" "move,misc,load,store")
@@ -830,6 +840,8 @@
       return \"ldob	%1,%0\";
     case 3:
       return \"stob	%1,%0\";
+    default:
+      abort();
     }
 }"
   [(set_attr "type" "move,misc,load,store")
@@ -869,6 +881,8 @@
       return i960_output_ldconst (operands[0], operands[1]);
     case 5:
        return i960_output_move_double_zero (operands[0]);
+    default:
+      abort();
     }
 }"
   [(set_attr "type" "move,move,load,load,store,store")])
@@ -894,6 +908,8 @@
       return i960_output_move_double (operands[0], operands[1]);
     case 2:
       return i960_output_ldconst (operands[0], operands[1]);
+    default:
+      abort();
     }
 }"
   [(set_attr "type" "move,move,load,load,store")])
@@ -948,6 +964,8 @@
       return i960_output_ldconst (operands[0], operands[1]);
     case 5:
       return i960_output_move_quad_zero (operands[0]);
+    default:
+      abort();
     }
 }"
   [(set_attr "type" "move,move,load,load,store,store")])
@@ -973,6 +991,8 @@
       return i960_output_move_quad (operands[0], operands[1]);
     case 2:
       return i960_output_ldconst (operands[0], operands[1]);
+    default:
+      abort();
     }
 }"
   [(set_attr "type" "move,move,load,load,store")])
@@ -1085,6 +1105,8 @@
     case 5:
       operands[1] = adjust_address (operands[0], VOIDmode, 4);
       return \"st	g14,%0\;st	g14,%1\";
+    default:
+      abort();
     }
 }"
   [(set_attr "type" "move,move,load,fpload,fpstore,fpstore")])
@@ -1115,6 +1137,8 @@
       return \"ldl	%1,%0\";
     case 4:
       return \"stl	%1,%0\";
+    default:
+      abort();
     }
 }"
   [(set_attr "type" "move,move,load,fpload,fpstore")])
@@ -1158,6 +1182,8 @@
       if (operands[1] == CONST0_RTX (SFmode))
 	return \"st	g14,%0\";
       return \"st	%1,%0\";
+    default:
+      abort();
     }
 }"
   [(set_attr "type" "move,move,load,fpload,fpstore")])
@@ -1188,6 +1214,8 @@
       return \"ld	%1,%0\";
     case 4:
       return \"st	%1,%0\";
+    default:
+      abort();
     }
 }"
   [(set_attr "type" "move,move,load,fpload,fpstore")])
@@ -2099,6 +2127,8 @@
       return \"ldt	%1,%0\";
     case 4:
       return \"stt	%1,%0\";
+    default:
+      abort();
     }
 }"
   [(set_attr "type" "move,move,load,fpload,fpstore")])
@@ -2353,7 +2383,6 @@
   rtx chain = operands[0];
   rtx handler = operands[1];
   rtx stack = operands[2];
-  rtx label = operands[3];
 
   /* We must restore the stack pointer, frame pointer, previous frame
      pointer and the return instruction pointer.  Since the ret
