--- a/gcc/config/m32r/m32r.md
+++ b/gcc/config/m32r/m32r.md
@@ -1448,7 +1448,7 @@
   ""
   "*
 {
-  char *br,*invbr;
+  const char *br,*invbr;
   char asmtext[40];
 
   switch (GET_CODE (operands[1]))
@@ -1495,7 +1495,7 @@
   ""
   "*
 {
-  char *br,*invbr;
+  const char *br,*invbr;
   char asmtext[40];
 
   switch (GET_CODE (operands[1]))
