--- a/gcc/config/m68hc11/m68hc11.md
+++ b/gcc/config/m68hc11/m68hc11.md
@@ -1338,8 +1338,6 @@
   ""
  "*
 {
-  rtx ops[2];
-
   if (A_REG_P (operands[0]))
     return \"#\";
 
@@ -1919,10 +1917,10 @@
   "*
 {
   rtx   ops[3];
-  char* add_insn;
-  char* inc_insn;
-  char* incb_mem;
-  char* inch_mem;
+  const char* add_insn;
+  const char* inc_insn;
+  const char* incb_mem;
+  const char* inch_mem;
   HOST_WIDE_INT val;
 
   if (which_alternative > 2)
@@ -6148,7 +6146,7 @@
     output_asm_insn (\"ldd\\t%2\", operands);
   if ((INTVAL (operands[1]) & 0x0ff00) == 0x100)
     output_asm_insn (\"inca\", operands);
-  else if (INTVAL (operands[1]) & 0x0ff00 == 0xff00)
+  else if ((INTVAL (operands[1]) & 0x0ff00) == 0xff00)
     output_asm_insn (\"deca\", operands);
   else if (INTVAL (operands[1]) != 0)
     output_asm_insn (\"adda\\t%h1\", operands);
