* lex.c (copy_lang_type): Add static prototype.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46756 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-03  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* lex.c (copy_lang_type): Add static prototype.
+
 2001-11-02  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
 
 	* pt.c (unify): Handle SCOPE_REF.
