--- a/gcc/ChangeLog.4
+++ b/gcc/ChangeLog.4
@@ -14340,7 +14340,7 @@ Wed Jul 12 13:15:16 2000  Marc Espie <espie@openbsd.org>
 	* cpphash.c: (struct macro_info, alloc_macro, free_macro,
 	struct toklist_dummy): New.
 	(cpp_free_definition): Free macros with free_macro.
-	(count_params): Don't save paramter spellings.  Save macro
+	(count_params): Don't save parameter spellings.  Save macro
 	information in a struct macro_info.
 	(parse_define): Don't allocate a token list.
 	(save_expansion): Allocate the macro's token list, and
