--- a/gcc/ChangeLog.5
+++ b/gcc/ChangeLog.5
@@ -6191,7 +6191,7 @@ Tue Apr 10 17:45:50 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 	(store_ops_ok): Verfies registers expressions are valid in a block.
 	(find_moveable_store): Look for moveable stores in a pattern.
 	(compute_store_table): Find stores in a function worth moving, maybe.
-	(load_kills_store): Check dependance of a load and store.
+	(load_kills_store): Check dependence of a load and store.
 	(find_loads): Find any loads in a pattern.
 	(store_killed_in_insn): Check if a store is killed in an insn.
 	(store_killed_after): Check is store killed after an insn in a block.
