--- a/gcc/config/i370/i370.md
+++ b/gcc/config/i370/i370.md
@@ -1964,7 +1964,7 @@ check_label_emit ();
   "*
 {
   check_label_emit ();
-  CC_STATUS_INIT;  /* add assumes CC but LA doesnt set CC */
+  CC_STATUS_INIT;  /* add assumes CC but LA doesn't set CC */
   mvs_check_page (0, 4, 0);
   return \"LA	%0,%c2(,%1)\";
 }"
@@ -1983,7 +1983,7 @@ check_label_emit ();
   check_label_emit ();
   if ((unsigned) INTVAL (operands[2]) < 4096)
     {
-      CC_STATUS_INIT;  /* add assumes CC but LA doesnt set CC */
+      CC_STATUS_INIT;  /* add assumes CC but LA doesn't set CC */
       mvs_check_page (0, 4, 0);
       return \"LA	%0,%c2(,%1)\";
     }
@@ -2023,7 +2023,7 @@ check_label_emit ();
     {
       if (INTVAL (operands[2]) == -1)
 	{
-          CC_STATUS_INIT;  /* add assumes CC but BCTR doesnt set CC */
+          CC_STATUS_INIT;  /* add assumes CC but BCTR doesn't set CC */
 	  mvs_check_page (0, 2, 0);
 	  return \"BCTR	%0,0\";
 	}
@@ -2055,7 +2055,7 @@ check_label_emit ();
     {
       if (INTVAL (operands[2]) == -1)
 	{
-          CC_STATUS_INIT;  /* add assumes CC but BCTR doesnt set CC */
+          CC_STATUS_INIT;  /* add assumes CC but BCTR doesn't set CC */
 	  mvs_check_page (0, 2, 0);
 	  return \"BCTR	%0,0\";
 	}
@@ -2080,7 +2080,7 @@ check_label_emit ();
   "*
 {
   check_label_emit ();
-  CC_STATUS_INIT;  /* add assumes CC but LA doesnt set CC */
+  CC_STATUS_INIT;  /* add assumes CC but LA doesn't set CC */
   mvs_check_page (0, 4, 0);
   if (REG_P (operands[2]))
     return \"LA	%0,0(%1,%2)\";
@@ -2235,7 +2235,7 @@ check_label_emit ();
     }
   if (operands[2] == const1_rtx)
     {
-      CC_STATUS_INIT;  /* subtract assumes CC but BCTR doesnt set CC */
+      CC_STATUS_INIT;  /* subtract assumes CC but BCTR doesn't set CC */
       mvs_check_page (0, 2, 0);
       return \"BCTR	%0,0\";
     }
@@ -2264,7 +2264,7 @@ check_label_emit ();
     }
   if (operands[2] == const1_rtx)
     {
-      CC_STATUS_INIT;  /* subtract assumes CC but BCTR doesnt set CC */
+      CC_STATUS_INIT;  /* subtract assumes CC but BCTR doesn't set CC */
       mvs_check_page (0, 2, 0);
       return \"BCTR	%0,0\";
     }
