* java/util/ResourceBundle.java (getClassContext): Removed. 	(Security): New class, extends SecurityManger. 	(getBundle): Use Security.getCallingClassLoader instead of 	getClassContext. 	* java/util/natResourceBundle.cc: Removed.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46761 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,11 @@
+2001-11-04  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* java/util/ResourceBundle.java (getClassContext): Removed.
+	(Security): New class, extends SecurityManger.
+	(getBundle): Use Security.getCallingClassLoader instead of
+	getClassContext.
+	* java/util/natResourceBundle.cc: Removed.
+
 2001-11-03  Tom Tromey  <tromey@redhat.com>
 
 	* defineclass.cc (handleClassBegin): Use Object::class$, not
