--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2001-11-03  Geoffrey Keating  <geoffk@redhat.com>
+
+	* config/stormy16/stormy16.h (ASM_OUTPUT_MI_THUNK): Call
+	stormy16_asm_output_mi_thunk.
+	* config/stormy16/stormy16.c (stormy16_asm_output_mi_thunk): New
+	function.
+	* config/stormy16/stormy16-protos.h
+	(stormy16_asm_output_mi_thunk): New prototype.
+
 2001-11-04  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* ChangeLog.2, ChangeLog.4, ChangeLog.5, ChangeLog,
