--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2001-11-03  Geoffrey Keating  <geoffk@redhat.com>
 
+	* config/stormy16/stormy16.h (ASM_SPEC): Pass -g to the assembler.
+
 	* config/stormy16/stormy16.h (ASM_OUTPUT_MI_THUNK): Call
 	stormy16_asm_output_mi_thunk.
 	* config/stormy16/stormy16.c (stormy16_asm_output_mi_thunk): New
