--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2001-11-03  Geoffrey Keating  <geoffk@redhat.com>
 
+	* config/stormy16/stormy16.c (stormy16_print_operand): Avoid
+	some uses of uninitialized variables in error cases.
+
 	* config/stormy16/stormy16.c (stormy16_output_shift): Don't
 	look at 'temp' if we won't be using it.
 
